try fix for scrollbars

--- a/assets/styles/base/_base.sass
+++ b/assets/styles/base/_base.sass
@@ -1,7 +1,9 @@
+html
+  overflow-x: hidden
+
 html,
 body
   font-family: $sans-serif
-  overflow-x: hidden
 
 body
   &.is-nav-opened
